--- a/.github/workflows/hideyoshi.yml
+++ b/.github/workflows/hideyoshi.yml
@@ -1,4 +1,4 @@
-name: RDPku
+name: hideyoshi
 
 on: workflow_dispatch
 
@@ -9,36 +9,36 @@ jobs:
     timeout-minutes: 9999
 
     steps:
-    - name: Download Ngrok.
+    - name: Download Ngrok & NSSM
       run: |
         Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
     - name: Extracting Ngrok Files.
-      run: Expand-Archive ngrok.zip     
-    - name: Download NSSM.
+      run: Expand-Archive ngrok.zip
       run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/md5hash16/erdepeku/main/files/nssm.exe -OutFile nssm.exe          
+        Invoke-WebRequest https://github.com/md5hash16/erdepe/raw/main/ngrok/ngrok.exe -OutFile ngrok.exe
+        Invoke-WebRequest https://github.com/md5hash16/erdepe/raw/main/nssm.exe -OutFile nssm.exe
     - name: Copy NSSM & Ngrok to Windows Directory.
       run: | 
         copy nssm.exe C:\Windows\System32
-        copy .\ngrok\ngrok.exe C:\Windows\System32
+        copy ngrok.exe C:\Windows\System32
     - name: Connect your NGROK account
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Download Important Files.
       run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/md5hash16/erdepeku/main/files/NGROK-US.bat -OutFile NGROK-US.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/md5hash16/erdepeku/main/files/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/md5hash16/erdepeku/main/files/loop.bat -OutFile loop.bat
+        Invoke-WebRequest https://github.com/md5hash16/erdepe/raw/main/NGROK-AP.bat -OutFile NGROK-AP.bat
+        Invoke-WebRequest https://github.com/md5hash16/erdepe/raw/main/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
+        Invoke-WebRequest https://github.com/md5hash16/erdepe/raw/main/loop.bat -OutFile loop.bat
     - name: Make YML file for NGROK.
-      run: start NGROK-US.bat
+      run: start NGROK-AP.bat
     - name: Enable RDP Access.
       run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
         Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
     - name: Create Tunnel
-      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389"'
+      run: sc start ngrok
     - name: Connect to your RDP 2core-7GB Ram.
       run: cmd /c NGROK-CHECK.bat
     - name: All Done! You can close Tab now! Maximum VM time:6h.
