--- a/.github/workflows/hideyoshi.yml
+++ b/.github/workflows/hideyoshi.yml
@@ -14,14 +14,13 @@ jobs:
         Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
     - name: Extracting Ngrok Files.
       run: Expand-Archive ngrok.zip
-    - name: Download Ngrok & NSSM.
-      run: |
-        Invoke-WebRequest https://github.com/md5hash16/erdepe/raw/main/ngrok.exe -OutFile ngrok.exe
+    - name: Download NSSM.
+      run: |        
         Invoke-WebRequest https://github.com/md5hash16/erdepe/raw/main/nssm.exe -OutFile nssm.exe
     - name: Copy NSSM & Ngrok to Windows Directory.
       run: | 
         copy nssm.exe C:\Windows\System32
-        copy ngrok.exe C:\Windows\System32
+        copy .\ngrok\ngrok.exe C:\Windows\System32
     - name: Connect your NGROK account
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
@@ -39,7 +38,7 @@ jobs:
         Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
     - name: Create Tunnel
-      run: sc start ngrok
+      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389"'
     - name: Connect to your RDP 2core-7GB Ram.
       run: cmd /c NGROK-CHECK.bat
     - name: All Done! You can close Tab now! Maximum VM time:6h.
