--- a/.github/workflows/hideyoshi.yml
+++ b/.github/workflows/hideyoshi.yml
@@ -20,9 +20,9 @@ jobs:
     - name: Copy NSSM & Ngrok to Windows Directory.
       run: | 
         copy nssm.exe C:\Windows\System32
-        copy .\ngrok\ngrok.exe C:\Windows\System32
+        copy /ngrok/ngrok.exe C:\Windows\System32
     - name: Connect your NGROK account
-      run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Download Important Files.
